[package]
name = "rivulus_logboat_proxy"
authors = ["ninjadev64"]
license = "LGPL-3.0+"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.26"
futures = "0.3"
futures-lite = "2.6"
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"], optional = true }
serde_json = "1.0"

[features]
stripe = ["dep:async-stripe"]
